# sanpao15

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md  package.json
backend/include/sanpao15/: local_backend.h
backend/src/: local_backend.cpp
cli/src/: main.cpp
core/include/sanpao15/: bitboard.h  move.h  notation.h  position.h  rules.h  ruleset.h
core/src/: bitboard.cpp  move.cpp  movegen.cpp  notation.cpp  position.cpp  rules.cpp  ruleset.cpp
docs/: assets.md  dense-successor.md  edge-probe.md  external-closure.md  external-keyset.md  full-tablebase.md  layered-solver.md  low-k-tablebase.md  material-target-distance-tablebase.md  partitioned-external-closure.md  partitioned-keyset.md  roadmap.md  rules.md  scalable-tablebase-solver.md  solver.md  table-format.md  third-party.md  ui-reference-research.md
solver/include/sanpao15/: combinadic.h  dense_bitset.h  dense_index.h  dense_successor.h  dense_table.h  edge_probe.h  external_closure.h  external_keyset.h  layered.h  lowk_tablebase.h  mapped_file.h  material_target_distance.h  parallel.h  partitioned_keyset.h  small_count_array.h  solver.h  table.h
solver/src/: combinadic.cpp  dense_bitset.cpp  dense_index.cpp  dense_successor.cpp  dense_table.cpp  edge_probe.cpp  external_closure.cpp  external_keyset.cpp  layered.cpp  lowk_tablebase.cpp  mapped_file.cpp  material_target_distance.cpp  parallel.cpp  partitioned_keyset.cpp  retrograde.cpp  small_count_array.cpp  solver.cpp  table.cpp
tests/: test_bitboard.cpp  test_combinadic.cpp  test_common.h  test_csr.cpp  test_dense_bitset.cpp  test_dense_index.cpp  test_dense_predecessor.cpp  test_dense_successor.cpp  test_dense_table.cpp  test_edge_probe.cpp  test_external_closure.cpp  test_external_keyset.cpp  test_layered.cpp  test_local_backend.cpp  test_lowk_tablebase.cpp  test_main.cpp  test_material_target_distance.cpp  test_movegen.cpp  test_notation.cpp  test_parallel.cpp  test_partitioned_keyset.cpp  test_small_count_array.cpp  test_solver_small.cpp  test_stats.cpp  test_table.cpp  test_terminal.cpp
ui/: index.html  package-lock.json  package.json
ui/src/: app.ts  board.ts  boardOrientation.ts  engine.ts  main.ts  styles.css
ui/src/analysis/: bestMove.ts  sideComparison.ts  table.ts
ui/src/editor/: positionEditor.ts  validation.ts
ui/src/i18n/: zh.ts
ui/src/tablebase/: denseIndex.ts  denseResult.ts  lineExplorer.ts  provider.ts  recommend.ts
ui/src/ui/: badges.ts  details.ts  explainMove.ts  formatMtd.ts  keyMetrics.ts  moveFunnel.ts  moveShape.ts  mtdLadder.ts  recommendationMode.ts  tablebaseCoverage.ts
